fixed contact form issue on iphone

--- a/styles/style.css
+++ b/styles/style.css
@@ -2442,7 +2442,7 @@ position: relative;
 
 .on_page_contact {
     /* background-color: #fafafa; */
-    background-color: yellow;
+    background-color: green;
     border-top: 1px solid #d6d6d6;
     padding-top: 20px;
     margin-top: 40px;
@@ -2494,7 +2494,9 @@ position: relative;
     height: 30px;
     width: 50vw;
     padding: 0;
+    padding-left: 5px;
     font-family: Tahoma, Helvetica, Arial, sans-serif;
+    font-size: 18px;
 }
 
 /* ::-webkit-input-placeholder {
@@ -2521,6 +2523,8 @@ position: relative;
 .on_page_contact textarea {
     width: 50vw;
     font-family: Tahoma, Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    padding-left: 5px;
 }
 
 .on_page_submit_btn {
